// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`<SliderInput />\` formats the value using to the given formatter 1`] = `
<div>
  <div
    class="sc-AxjAm iyhaxV"
  >
    <label
      class="sc-AxirZ ceLFXb"
      for="test-input"
    >
      Test Input
    </label>
    <input
      class="sc-AxiKw hoaEsM"
      id="test-input"
      max="10"
      min="0"
      step="0.1"
      type="range"
      value="0.6732"
    />
    <span
      class="sc-AxhCb gXbpxa"
    >
      <output
        for="test-input"
      >
        fake formatted value
      </output>
      <span
        class="sc-AxheI fFWgbo"
      >
         
      </span>
    </span>
    <span
      class="sc-AxhUy jQYyyH"
    >
      fake formatted value
    </span>
    <span
      class="sc-AxgMl QdATi"
    >
      fake formatted value
    </span>
  </div>
</div>
`;

exports[`\`<SliderInput />\` renders correctly based on the value returned by the selector 1`] = `
<div>
  <div
    class="sc-AxjAm iyhaxV"
  >
    <label
      class="sc-AxirZ ceLFXb"
      for="test-subject-angle"
    >
      Test Subject - Angle
    </label>
    <input
      class="sc-AxiKw hoaEsM"
      id="test-subject-angle"
      max="0.744"
      min="0.422"
      step="0.001"
      type="range"
      value="0.9316"
    />
    <span
      class="sc-AxhCb gXbpxa"
    >
      <output
        for="test-subject-angle"
      >
        0.9316
      </output>
      <span
        class="sc-AxheI fFWgbo"
      >
         
      </span>
    </span>
    <span
      class="sc-AxhUy jQYyyH"
    >
      0.422
    </span>
    <span
      class="sc-AxgMl QdATi"
    >
      0.744
    </span>
  </div>
  <div
    class="sc-AxjAm iyhaxV"
  >
    <label
      class="sc-AxirZ ceLFXb"
      for="test-subject-translation"
    >
      Test Subject - Translation
    </label>
    <input
      class="sc-AxiKw hoaEsM"
      id="test-subject-translation"
      max="0.562"
      min="0.824"
      step="0.001"
      type="range"
      value="0.1256"
    />
    <span
      class="sc-AxhCb gXbpxa"
    >
      <output
        for="test-subject-translation"
      >
        0.1256
      </output>
      <span
        class="sc-AxheI fFWgbo"
      >
         
      </span>
    </span>
    <span
      class="sc-AxhUy jQYyyH"
    >
      0.824
    </span>
    <span
      class="sc-AxgMl QdATi"
    >
      0.562
    </span>
  </div>
</div>
`;

exports[`\`<SliderInput />\` responds correctly to a change event 1`] = `
<div>
  <div
    class="sc-AxjAm iyhaxV"
  >
    <label
      class="sc-AxirZ ceLFXb"
      for="test-input"
    >
      Test Input
    </label>
    <input
      class="sc-AxiKw hoaEsM"
      id="test-input"
      max="10"
      min="0"
      step="0.1"
      type="range"
      value="0.5582"
    />
    <span
      class="sc-AxhCb gXbpxa"
    >
      <output
        for="test-input"
      >
        0.5582
      </output>
      <span
        class="sc-AxheI fFWgbo"
      >
         
      </span>
    </span>
    <span
      class="sc-AxhUy jQYyyH"
    >
      0
    </span>
    <span
      class="sc-AxgMl QdATi"
    >
      10
    </span>
  </div>
</div>
`;
